# MagicChess

./: .gitignore  CMakeLists.txt  a.out  chess.srctrldb  chess.srctrlprj  formatfile.sh  main.cpp  makefile
client/: CMakeLists.txt  main.cpp
include/: AttackResualt.h  Board.h  BoardRepository.h  Damage.h  DamageRasualt.h  Fild.h  FildPosition.h  IBoard.h  IBoardRepository.h  IDrawable.h  IPawn.h  IPawnRepository,h  MoveResualt.h  Pawn.h  Reference.h  constans.h
server/: CMakeLists.txt  default_config.ini  main.cpp
server/include/: Board.h  Config.h  GameServer.h  IOGate.h  Match.h  Output.h  Player.h  Result.h  interface.h
server/include/GameLogic/: Match.h
server/include/Repository/: Board.h  IBoard.h  IPawn.h  IRepositoryFactory.h  Pawn.h  RepositoryFactory.h
server/src/: Config.cpp  GameServer.cpp  IOGate.cpp  Match.cpp
server/src/Repository/: Board.cpp  Pawn.cpp  RepositoryFactory.cpp
src/: Board.cpp
